# onboarding-sandbox

./: .gitignore  README.md
blockchain-interaction/reading-from-blockchain/: 1-get-account-state.ts  2-call-get-method-wrappers.ts  2-call-get-method.ts  3-fetch-account-transaction.ts  package-lock.json  package.json
blockchain-interaction/writing-to-blockchain/: 1-send-ton.ts  2-send-jetton.ts  3-send-nft.ts  package-lock.json  package.json
go-exchange-wrapper/: Makefile  config.go  go.mod  go.sum
go-exchange-wrapper/app/: main.go
go-exchange-wrapper/exchange/: exchange.go
metrics/: metrics.csv
py-ton-exchange/: .gitignore  pyproject.toml
py-ton-exchange/src/: __main__.py
sandbox-examples/: README.md  package-lock.json  package.json
sandbox-examples/contracts/: distributor.fc
sandbox-examples/wrappers/: Distributor.compile.ts  Distributor.ts
tact-exchange/: .gitignore  README.md  package-lock.json  package.json
tact-exchange/contracts/: order.tact  order_deployer.tact
tact-exchange/scripts/: deployOrder.ts  deployOrderDeployer.ts  incrementOrder.ts
tact-exchange/tests/: Order.spec.ts  OrderDeployer.spec.ts
tact-exchange/wrappers/: JettonMinter.compile.ts  JettonWallet.ts  Order.compile.ts  Order.ts  OrderDeployer.compile.ts  OrderDeployer.ts
test-utils/: package-lock.json  package.json  tsconfig.json
test-utils/common-wrappers/: JettonMinter.ts  JettonWallet.ts  NftCollection.ts  NftItem.ts
ton-exchange/: .eslintignore  .gitignore  README.md  jest.config.ts  package-lock.json  package.json  tsconfig.json
(+80 files in other folders)
